refactor(controller): advice 이름 변경